# platform-poc

./: .env  .env.example  .gitignore  README.md  helm_upgrade.sh  pom.xml  spin_up.sh
infrastructure/: main.tf  terraform.tfvars
inventory-service/: pom.xml
java-containers-k8s/: README.md  pom.xml  spin_up.sh  tear_down.sh
notification-service/: pom.xml
order-service/: pom.xml
rust-containers-k8s/inventory-service/: .env.example  Cargo.toml  Dockerfile  benchmark.fish  db_dump.sql  run.fish
rust-containers-k8s/inventory-service/migrations/: 20231220142601_schema.up.sql  20231220142744_seed.down.sql  20231220142744_seed.up.sql
rust-containers-k8s/inventory-service/src/: config.rs  main.rs
rust-containers-k8s/inventory-service/src/api/: handlers.rs  mod.rs  server.rs  types.rs
rust-containers-k8s/notification-service/: Cargo.toml  Dockerfile  run.fish
rust-containers-k8s/notification-service/src/: config.rs  core.rs  lib.rs  main.rs  server.rs  types.rs
rust-containers-k8s/order-service/: .env.example  Cargo.toml  Dockerfile  benchmark.fish  db_dump.sql  run.fish
rust-containers-k8s/order-service/.sqlx/: query-6bf59dda6e5db7bc3235366cb1a42a3e76b37bc85086fb71c1944d9d8bb5a38c.json  query-bc8c39e428aaaa676dac2880288bfe7a855116c8f87b0a0f00c480e4a068813f.json  query-c94e07fc4cce2cb16f1118d2221709a8d6aaf99a44efe29c6f39b0204c3e33a7.json  query-ec32a82d65e640cdf1ce55786cbbb431943ce608a6446e516da346adb93e2733.json
rust-containers-k8s/order-service/migrations/: 20231220142601_schema.up.sql  20231221131408_schema.sql
rust-containers-k8s/order-service/sql/: all_orders.sql
rust-containers-k8s/order-service/src/: config.rs  lib.rs  main.rs  model.rs
rust-containers-k8s/order-service/src/api/: handlers.rs  server.rs  types.rs
rust-containers-k8s/order-service/src/order/: database.rs  mod.rs
rust-containers-k8s/product-service/: .env.example  Cargo.toml  Dockerfile  benchmark.fish  run.fish
rust-containers-k8s/product-service/src/: config.rs  lib.rs  main.rs  model.rs
rust-containers-k8s/product-service/src/api/: core.rs  handlers.rs  mod.rs  server.rs  types.rs
rust-wasmcloud/inventory/: Cargo.toml
rust-wasmcloud/inventory/src/: lib.rs
rust-wasmcloud/inventory/wit/: deps.toml  world.wit
rust-wasmcloud/platform-wasmcloud/: Cargo.toml  README.md
rust-wasmcloud/platform-wasmcloud/src/: lib.rs
rust-wasmcloud/platform-wasmcloud/wit/: deps.toml  world.wit
rust-wasmcloud/products/: Cargo.toml
rust-wasmcloud/products-http/: Cargo.toml  README.md  build.rs  wadm.yaml  wasm-compose.yml  wasmcloud.toml
rust-wasmcloud/products-http/src/: lib.rs  model.rs
rust-wasmcloud/products-http/src/adapters/: http.rs  keyvalue.rs  mod.rs
rust-wasmcloud/products-http/src/api/: types.rs
rust-wasmcloud/products-http/wit/: deps.toml  world.wit
rust-wasmcloud/products/src/: lib.rs
rust-wasmcloud/products/src/adapters/: http.rs  mod.rs
rust-wasmcloud/products/src/api/: types.rs
rust-wasmcloud/products/wit/: deps.toml  world.wit
rust-wasmcloud/virtual-keyvalue-batch/: Cargo.toml  README.md
rust-wasmcloud/virtual-keyvalue-batch/src/: lib.rs
rust-wasmcloud/virtual-keyvalue-batch/wit/: deps.toml  expanded.rs  world.wit
wasm-components/: Cargo.toml  README.md  rust-toolchain.toml
wasm-components/data-init/: Cargo.toml
wasm-components/data-init/src/: lib.rs
wasm-components/data-init/wit/: data-init.wit  world.wit
wasm-components/http-controller/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/http-controller/src/: lib.rs
wasm-components/http-controller/wit/: world.wit
wasm-components/inventory-service/: Cargo.toml
wasm-components/inventory-service/src/: lib.rs
wasm-components/inventory-service/wit/: world.wit
wasm-components/notification-service/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/notification-service/src/: lib.rs
wasm-components/notification-service/wit/: world.wit
wasm-components/orders-service/: Cargo.toml  wasmcloud.toml
wasm-components/orders-service/src/: lib.rs
wasm-components/orders-service/wit/: world.wit
wasm-components/products-service/: Cargo.toml  wasmcloud.toml
wasm-components/products-service/src/: lib.rs
wasm-components/products-service/wit/: deps.toml  world.wit
wasm-components/rust/: Cargo.toml  Makefile  rust-toolchain.toml
wasm-components/rust/.cargo/: config.toml
wasm-components/rust/.zed/: settings.json
wasm-components/rust/common/: Cargo.toml
wasm-components/rust/common/src/: inventory.rs  lib.rs  notification.rs  orders.rs  products.rs
wasm-components/rust/common/wit/: deps.toml  world.wit
wasm-components/rust/data-init/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/rust/data-init/src/: lib.rs
wasm-components/rust/data-init/wit/: deps.toml  world.wit
wasm-components/rust/http-controller/: Cargo.toml  wasmcloud.toml
wasm-components/rust/http-controller/src/: http.rs  lib.rs
wasm-components/rust/http-controller/wit/: deps.toml  world.wit
wasm-components/rust/inventory-service/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/rust/inventory-service/src/: lib.rs
wasm-components/rust/inventory-service/wit/: deps.toml  world.wit
wasm-components/rust/notification-service/: Cargo.toml  wasmcloud.toml
wasm-components/rust/notification-service/src/: lib.rs
wasm-components/rust/notification-service/wit/: deps.toml  world.wit
wasm-components/rust/orders-service/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/rust/orders-service/src/: lib.rs
wasm-components/rust/orders-service/wit/: deps.toml  world.wit
wasm-components/rust/products-service/: Cargo.toml  README.md  wasmcloud.toml
wasm-components/rust/products-service/src/: lib.rs
wasm-components/rust/products-service/wit/: deps.toml  world.wit
wasm-components/rust/scripts/: build.fish  clean.fish  test.fish
wasm-components/scripts/: clean.fish  update_deps.fish
wasm-components/wit/inventory/: inventory.wit
wasm-components/wit/orders/: orders.wit
wasm-components/wit/platform/: keyvalue.wit
wasm-components/wit/products/: products.wit
(+238 files in other folders)
