[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["json", "macros", "query"]}
dotenv = "0.15.0"
envy = "0.4.2"
serde = {version = "1.0.193", features=["derive"]}
reqwest = { version = "0.11.23", features = ["json"]}
tokio =  { version = "1.35.0", features = ["full"] }
anyhow = "1.0.75"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
