[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
rdkafka = { version = "0.36.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio =  { version = "1.35.1", features = ["full"] }
