[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dotenv = "0.15.0"
envy = "0.4.2"
kafka = "0.10.0"
rdkafka = "0.35.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio =  { version = "1.35.1", features = ["full"] }
