[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["json", "macros"] }
backoff = "0.4.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
rdkafka = "0.35.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "postgres",
  "bigdecimal"
] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
