[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-nats = "0.38.0"
axum = { version = "0.8.1", features = ["json", "macros"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
dotenv.workspace = true
envy.workspace = true
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "bigdecimal", ] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
