[package]
name = "platform-wasmcloud"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "platform-poc:platform-wasmcloud"

[package.metadata.component.target]
path = "wit/world.wit"
world = "platform-wasmcloud"

[package.metadata.component.target.dependencies]
"platform-poc:keyvalue" = { path = "wit/deps/platform" }

[dependencies]
wit-bindgen = { version = "0.16", features = ["default"] }
