[package]
name = "products-http"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "platform-poc:products-http"

[package.metadata.component.target]
path = "wit/world.wit"
world = "products-http-service"

[package.metadata.component.target.dependencies]
"platform-poc:products" = { path = "../products/wit" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:sockets" = { path = "wit/deps/sockets" }

[dependencies]
anyhow = "1.0.79"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wit-bindgen = { version = "0.16", features = ["default"] }

[build-dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
wit-deps = { git = "https://github.com/bytecodealliance/wit-deps" }
