[package]
name = "http-hello-world"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wit-bindgen = { version = "0.16", features = ["default"] }

[build-dependencies]
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
wit-deps = { git = "https://github.com/bytecodealliance/wit-deps" }
