[package]
name = "products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "platform-poc:products"

[package.metadata.component.target]
path = "wit/world.wit"
world = "product-service"

[package.metadata.component.target.dependencies]
"platform-poc:keyvalue" = { path = "../wit/"}
