[workspace]
members = [
    "common",
    "data-init",
    "http-controller",
    "inventory-service",
    "notification-service",
    "orders-service",
    "products-service",
]
resolver = "2"

[workspace.dependencies]
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
wit-bindgen = "0.32"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
