[workspace]
members = [
    "data-init",
    "http-controller",
    "inventory-service",
    "notification-service",
    "orders-service",
    "products-service",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.10.0" }
wit-bindgen = "0.32"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
