[package]
name = "data-init"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.29", features = ["default"] }
common = { path = "../common" }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
