[package]
name = "http-controller"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.40"
common = { path = "../common" }
form_urlencoded = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
wit-bindgen = { version = "0.29", features = ["default"] }
