[package]
name = "http-controller"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
form_urlencoded = "1.2.1"
routefinder = "0.5.4"
serde.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
waki = { version = "0.3.1", features = ["json"] }
wit-bindgen.workspace = true
