[package]
name = "orders-service"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.24", features = ["default"] }
uuid = { version = "1.8.0", features = ["v4"] }
common = { path = "../common" }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }