[package]
name = "orders-service"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
indoc = "2.0.5"
notification-service = { version = "0.1.0", path = "../notification-service" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
wit-bindgen.workspace = true
