[package]
name = "products-service"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
log = "0.4.21"
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
wit-bindgen.workspace = true
